--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-#This file includes all contributors to this project
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `generate-authors.sh`.
 
 Peter Simiyu <simiyupeter10@gmail.com>
 Mushie Waweru <wawerumushie@gmail.com>
